feat: correcao de conf. aws no actions

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -19,8 +19,7 @@ jobs:
 
       - name: Add profile credentials to ~/.aws/credentials
         run: |
-          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY }} --profile rds-fiap-api
-          aws configure set aws_secret_access_key ${{ secrets.AWS_ACCESS_SECRET_KEY }} --profile rds-fiap-api
+          aws configure --profile rds-fiap-api
           aws configure set aws_session_token ${{ secrets.AWS_SESSION_TOKEN }} --profile rds-fiap-api
           aws configure set region ${{ secrets.AWS_REGION }} --profile rds-fiap-api
 
