--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,6 +23,18 @@ jobs:
           aws configure set aws_session_token ${{ secrets.AWS_SESSION_TOKEN }} --profile rds-fiap-api
           aws configure set region ${{ secrets.AWS_REGION }} --profile rds-fiap-api
 
+      - name: Configure AWS Credentials 2
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+            aws-region: ${{ secrets.AWS_REGION }}
+            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+            aws-secret-access-key: ${{ secrets.AWS_ACCESS_SECRET_KEY}}
+            aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+            role-to-assume: arn:aws:iam::123456789100:role/github-actions-role
+      - name: get caller identity2
+        run: |
+            aws sts get-caller-identity
+
       - name: 'Terraform Init'
         run: terraform init
 
