--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -5,9 +5,9 @@ on:
     branches:
       - 'feat/provision-aws-rds'
   workflow_call:
-    secrets:
-        AWS_ACCESS_KEY_ID: {required: true}
-        AWS_SECRET_ACCESS_KEY: {required: true}
+    inputs:
+        AWS_ACCESS_KEY_ID: {required: true, type: string}
+        AWS_SECRET_ACCESS_KEY: {required: true, type: string}
 jobs:
   terraform:
     name: 'Terraform'
@@ -27,8 +27,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ inputs.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ inputs.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
       - name: 'Terraform Init'
