--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,10 +4,7 @@ on:
   push:
     branches:
       - 'feat/provision-aws-rds'
-  workflow_call:
-    inputs:
-        AWS_ACCESS_KEY_ID: {required: true, type: string}
-        AWS_SECRET_ACCESS_KEY: {required: true, type: string}
+
 jobs:
   terraform:
     name: 'Terraform'
@@ -25,10 +22,10 @@ jobs:
         uses: hashicorp/setup-terraform@v3
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ inputs.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ inputs.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
       - name: 'Terraform Init'
