--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -24,7 +24,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: 'us-east-1'
+          AWS_PROFILE: ${{secrets.AWS_PROFILE}}
+          AWS_DEFAULT_REGION: ${{secrets.AWS_REGION}}
 
       - name: 'Terraform Init'
         run: terraform init
