--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -19,12 +19,11 @@ jobs:
         uses: actions/checkout@v4
 
       - name: 'Setup AWS credentials'
-        run: |
-          mkdir -p ~/.aws
-          echo "[${{ secrets.AWS_PROFILE }}]" > ~/.aws/config
-          echo "aws_access_key_id = ${{ secrets.AWS_ACCESS_KEY_ID }}" >> ~/.aws/config
-          echo "aws_secret_access_key = ${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> ~/.aws/config
-          echo "region = ${{ secrets.AWS_REGION }}" >> ~/.aws/config
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: 'Setup Terraform'
         uses: hashicorp/setup-terraform@v3
