--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -19,11 +19,11 @@ jobs:
         uses: actions/checkout@v4
 
       - name: 'Setup AWS credentials'
-        uses: aws-actions/configure-aws-credentials@v4
+        uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: 'Setup Terraform'
         uses: hashicorp/setup-terraform@v3
