--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-region: us-east-1
 
       - name: 'Setup Terraform'
         uses: hashicorp/setup-terraform@v3
@@ -31,7 +31,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_PROFILE: ${{secrets.AWS_PROFILE}}
           AWS_DEFAULT_REGION: ${{secrets.AWS_REGION}}
 
       - name: 'Terraform Init'
