--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,34 +4,24 @@ on:
   push:
     branches:
       - 'feat/provision-aws-rds'
-
+  pull_request:
+    branches:
+      - 'feat/provision-aws-rds'
+permissions:
+  id-token: write
+  contents: read
 jobs:
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      id-token: write
-      packages: write
-
     steps:
       - name: 'Checkout'
-        uses: actions/checkout@v2
-
-      - name: 'Setup AWS credentials'
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+        uses: actions/checkout@v4
 
       - name: 'Setup Terraform'
         uses: hashicorp/setup-terraform@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ${{secrets.AWS_REGION}}
+        with:
+          terraform_version: 1.1.7
 
       - name: 'Terraform Init'
         run: terraform init
@@ -51,5 +41,8 @@ jobs:
         
       - name: 'Execute SQL script'
         run: |
-          mysql --host=${{ steps.rds.outputs.endpoint }} --user=${{env.MYSQL_USER}} --password=${{secrets.MYSQL_PASSWORD}} -P ${{env.MYSQL_PORT}} --database=${{env.MYSQL_DBNAME}} < scripts/migration_prod.sql
+          mysql --host=${{ steps.rds.output.endpoint }} --user=${{env.MYSQL_USER}} --password=${{secrets.MYSQL_PASSWORD}} -P ${{env.MYSQL_PORT}} --database=${{env.MYSQL_DBNAME}} < scripts/migration_prod.sql
+          - name: Terraform Destroy
+      - name: 'Terraform Destroy'
+        run: terraform destroy -auto-approve
         
