bugfix: terraform provider remove var profile

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -3,7 +3,7 @@ name: 'Terraform'
 on:
   push:
     branches:
-      - 'feat/provision-aws-rds'
+      - 'main'
   pull_request:
     branches:
       - 'feat/provision-aws-rds'
