--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -35,10 +35,13 @@ jobs:
       - name: 'Terraform Apply'
         id: apply
         run: terraform apply -auto-approve
+    
+      - name: 'Set RDS Endpoint as Env Var'
+        run: echo "RDS_ENDPOINT=$(terraform output -raw rds_endpoint)" >> $GITHUB_ENV
         
       - name: 'Execute SQL script'
         run: |
-          mysql --host=${{  steps.apply.outputs.rds_endpoint }} --user=${{env.MYSQL_USER}} --password=${{secrets.MYSQL_PASSWORD}} -P 3306 --database=${{env.MYSQL_DBNAME}} --protocol=TCP < scripts/migration_prod.sql
+          mysql --host=${{  env.RDS_ENDPOINT }} --user=${{env.MYSQL_USER}} --password=${{secrets.MYSQL_PASSWORD}} -P 3306 --database=${{env.MYSQL_DBNAME}} --protocol=TCP < scripts/migration_prod.sql
 
       - name: 'Terraform Destroy'
         run: terraform destroy -auto-approve
