chore: AWS data connection updated

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - 'main'
+      - 'feat/provision-aws-rds'
   pull_request:
     branches:
       - 'feat/provision-aws-rds'
