feat: tables _log deleted

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,10 +4,9 @@ on:
   push:
     branches:
       - 'main'
-      - 'feat/provision-aws-rds'
   pull_request:
     branches:
-      - 'feat/provision-aws-rds'
+      - 'main'
 permissions:
   id-token: write
   contents: read
