Feat/provision aws rds (#2)
* chore: AWS data connection updated

* chore: AWS data connection updated

* feat: refactor index,trigger and er relationship

* feat: db name updated

* feat: db name updated

* feat: db name updated

* feat: tables _log deleted

* feat: tables _log deleted

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -6,7 +6,7 @@ on:
       - 'main'
   pull_request:
     branches:
-      - 'feat/provision-aws-rds'
+      - 'main'
 permissions:
   id-token: write
   contents: read
